[Antact] Alignment corrected for the response

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -55,6 +55,10 @@ section {
     box-shadow			:	inset 1px 1px 3px #000, inset -1px -1px 3px #000;
 }
 
+.container.response {
+    justify-content     : flex-start;
+}
+
 .container.failure {
     justify-content     : flex-start;
     overflow-x          : scroll;
